--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,23 +1,43 @@
-<h2><%= t(".h2_signup") %></h2>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="col-xl-10 col-lg-12 col-md-9">
+  <div class="card o-hidden border-0 shadow-lg my-5">
+    <div class="card-body p-0">
+      <div class="row">
+        <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+        <div class="col-lg-6">
+          <div class="p-5">
+            <div class="text-center">
+              <h2 class="h4 text-gray-900 mb-4"><%= t(".h2_signup") %></h2>
+            </div>
+            <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "user"}) do |f| %>
+              <%= render "devise/shared/error_messages", resource: resource %>
+              <div class="form-group">
+                <%= f.text_field :name, autofocus: true, placeholder: "Full Name", class: "form-control form-control-user" %>
+              </div>
+              <div class="form-group">
+                <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email", class: "form-control form-control-user" %>
+              </div>
+              <div class="form-group row">
+                <div class="col-sm-6 mb-3 mb-sm-0">
+                  <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password", class: "form-control form-control-user" %>
+                </div>
+                <div class="col-sm-6">
+                  <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder:" Confirm password", class: "form-control form-control-user" %>
+                </div>
+              </div>
+              <div class="form-group">
+                <% if @minimum_password_length %>
+                  <em>(<%= @minimum_password_length %>
+                    characters minimum)</em>
+                <% end %><br/>
+              </div>
+              <%= f.submit t(".submit_signup"), class: "btn btn-primary btn-user btn-block" %>
+            <% end %>
+            <div class="text-center">
+              <%= render "devise/shared/links" %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-  <div class="actions">
-    <%= f.submit t(".submit_signup") %>
-  </div>
-<% end %>
-<%= render "devise/shared/links" %>
+</div>
