ref function #12342 load-more-messages

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,27 +1,1 @@
-<ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-  <%= render "side_content" %>
-</ul>
-<div id="content-wrapper" class="d-flex flex-column">
-  <div id="content">
-    <%= render "navbar" %>
-    <div class="container-fluid">
-      <!-- Page Heading -->
-      <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800"><%= t(".h1_name_group") %></h1>
-      </div>
-      <div class="chat-content" id="messages">
-        <div id="timeline" class="chat-window" id="message-container">
-          <%= render @messages %>
-        </div>
-        <section class="chat-form">
-          <%= form_for(@message,html: {class: "input-group mb-3"}, url: message_path, remote: true) do |f|%>
-            <%= f.text_field :body, {class: "form-control", id: "message_body", placeholder: "Type something...", aria:{label: "Type something...", describedby: "button-addon2"}} %>
-            <div class="input-group-append">
-              <%= f.submit t(".btn_enter_mess"), {class: "btn btn-outline-secondary", id: "button-addon2"}%>
-            </div>
-          <% end %>
-        </section>
-      </div>
-    </div>
-  </div>
-</div>
+<h1>Home Page</h1>
