--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -75,10 +75,18 @@
           <%= t(".profile.a_activity_log")%>
         </a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+        <%= link_to destroy_user_session_path, {
+          class: "dropdown-item",
+          data: {
+            toggle: "modal",
+            target: "#logoutModal"
+          },
+          id: "sign-out",
+          method: :delete
+        } do %>
           <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-          <%= t(".profile.a_logout")%>
-        </a>
+          <span><%= t(".profile.a_logout") %></span>
+        <% end %>
       </div>
     </li>
   </ul>
