--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -6,5 +6,5 @@
       class="img-profile rounded-circle"
     />
   </div>
-  <div class="chat-avartar"><%= t(".message_content") %></div>
+  <div class="chat-avartar"><%= message.body %></div>
 </div>
