--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -58,14 +58,14 @@
     <li class="nav-item dropdown no-arrow">
       <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <span class="mr-2 d-none d-lg-inline text-gray-600 small"><%= current_user.name %></span >
-        <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60"/>
+        <%= image_tag user_avatar(current_user, 40), class: "img-profile rounded-circle" %>
       </a>
       <!-- Dropdown - User Information -->
       <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-        <a class="dropdown-item" href="#">
+        <%= link_to edit_user_registration_path, class: "dropdown-item" do %>
           <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-          <%= t(".profile.a_profile")%>
-        </a>
+          <span><%= t(".profile.a_profile")%></span>
+        <% end %>
         <a class="dropdown-item" href="#">
           <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
           <%= t(".profile.a_settings")%>
